Add pom